--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,4 @@
-/*
 
-font-family: 'Marmelad', sans-serif;
-*/
 
 body{
     margin: 0;
@@ -25,7 +22,13 @@ h1, h2, h3, h4, h5, h6{
 }
 
 
+
+
 /*Button*/
+
+.scroll-btn{
+    cursor: pointer;
+}
 
 .btn{
     display: inline-block;
@@ -70,6 +73,10 @@ h1, h2, h3, h4, h5, h6{
 
 .burger-menu{
     display:none;
+}
+
+.cross{
+    display: none;
 }
 
 /*Container*/
@@ -343,7 +350,7 @@ h1, h2, h3, h4, h5, h6{
 
 .advertises{
     margin-top:160px;
-    padding-bottom: 78px;
+    padding-bottom: 63px;
 }
 
 .advertise{
@@ -355,6 +362,11 @@ h1, h2, h3, h4, h5, h6{
 .advertise:first-child{
     margin-bottom: 208px;
     padding-top: 20px
+}
+
+.advertise:last-child{
+    margin-bottom: 15px;
+
 }
 
 .advertise-info{
@@ -624,6 +636,170 @@ h1, h2, h3, h4, h5, h6{
 
 
 
+/*Contacts*/
+
+.contacts{
+    width: 100%;
+    height: auto;
+    background-color: #F6F8FA;
+
+    padding: 130px 0;
+}
+
+.contacts-inner{
+    display: flex;
+    justify-content: space-between;
+
+    margin: 115px 0;
+}
+
+.contacts-inner img{
+    display: block;
+    border-radius: 10px;
+
+    width: 100%;
+    max-width: 650px;
+    height: 100%;
+
+    margin-right: 35px;
+}
+
+.contacts-title{
+    margin-left: -6px;
+    max-width: 300px;
+}
+
+.contacts-text{
+    display: block;
+    width: 100%;
+    max-width: 500px;
+    margin: 0;
+}
+
+.contacts-text i{
+    display: inline-block;
+    margin-right: 8px;
+}
+
+.contacts-info{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contacts-info-item{
+    width: 500px;
+}
+
+.contacts-link{
+    color:#000000;
+    text-decoration: none;
+
+    transition: opacity .2s linear;
+}
+
+.contacts-link:hover{
+    opacity: 1;
+    text-decoration: underline;
+
+}
+
+
+/*Doctors*/
+
+.doctors-title{
+    max-width: 500px;
+}
+
+.doctors{
+    width: 100%;
+    height: auto;
+    background-color: #F6F8FA;
+
+    padding: 130px 0;
+    padding-bottom: 101px;
+}
+
+.doctors-list{
+    margin: 115px 0;
+    margin-bottom: 89px;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 89px 89px;
+    justify-content: center;
+}
+
+.doctors-item{
+    background-color: white ;
+    width:375px;
+    height:auto;
+    text-align: center;
+
+    border-radius: 20px;
+    filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.25));
+}
+
+.doctors-item img{
+    width:100%;
+    height:auto;
+    display: block;
+}
+
+.doctors-info{
+    display: flex;
+    flex-direction: column;
+    height: 392px;
+    align-items: center;
+}
+
+.doctors-name{
+    font-family: 'Marmelad', sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 1.194;
+
+    margin-top: 35px;
+}
+
+.doctors-prof{
+    width: 267px;
+    padding: 0;
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+
+.doctors-exp{
+    display: inline-block;
+    font-size: 20px;
+    line-height: 140%;
+    opacity: 0.5;
+}
+
+.doctors-exp i{
+    margin-right: 5px;
+}
+
+.doctors-btn{
+    font-size: 25px;
+    padding: 2px 35px 11px 35px;
+    margin-bottom: 40px;
+    margin-top: auto;
+}
+
+
+
+
+@media (max-width: 1363px){
+    /*Doctors*/
+
+    .doctors-list{
+        gap: 58px 58px;
+    }
+}
+
+
+
+
 @media (max-width: 1300px){
 
     /*Container*/
@@ -854,8 +1030,70 @@ h1, h2, h3, h4, h5, h6{
     }
 
 
+    /*Contacts*/
 
+    .contacts-inner{
+        flex-direction: column;
+        align-items: center;
+        margin: 60px 0;
 
+    }
+
+    .contacts-title {
+        margin-left: 0;
+        max-width: 100%;
+        text-align: center;
+    }
+
+    .contacts-inner img {
+        max-width: 600px;
+        margin-right: 0;
+        margin-bottom: 40px;
+    }
+
+    .contacts {
+        padding: 60px 0;
+    }
+
+    .contacts-text {
+        max-width: 100%;
+    }
+
+    .contacts-info-item:last-child{
+        max-width: 300px;
+    }
+
+    /*Doctors*/
+
+    .doctors-title {
+        margin-left: 0;
+        max-width: 100%;
+        text-align: center;
+    }
+
+    .doctors {
+        padding: 60px 0;
+    }
+
+    .doctors-list{
+        margin: 60px 0;
+
+    }
+
+    .doctors-name {
+        font-size: 31px;
+        max-width: 300px;
+    }
+
+    .doctors-exp {
+        font-size: 19px;
+    }
+
+    .doctors-info {
+        height: 362px;
+    }
+
+    
 }
 
 
@@ -917,6 +1155,12 @@ h1, h2, h3, h4, h5, h6{
     .footer-item:nth-child(4){
         margin-bottom: 10px;
         text-align: end;
+    }
+
+    /*Contacts*/
+
+    .contacts-text{
+        line-height: 148%;
     }
 
 }
@@ -1108,7 +1352,19 @@ h1, h2, h3, h4, h5, h6{
     .call-input {
         margin-bottom: 30px;
     }
+
+    /*Contacts*/
+
+    .contacts-info-item:last-child{
+        max-width: 150px;
+    }
     
+
+    /*Doctors*/
+
+    .doctors-prof {
+        padding: 0 15px;
+    }
 }
 
 
@@ -1132,11 +1388,11 @@ h1, h2, h3, h4, h5, h6{
 
     .header-lang{
         display: none;
+        margin: 0;
+        margin-top: 60px;
+        
     }
 
-    .nav{
-        display: none;
-    }
 
     .burger-menu{
         display: block;
@@ -1147,7 +1403,47 @@ h1, h2, h3, h4, h5, h6{
         cursor: pointer;
     }
 
+    .cross{
+        display: none;
+        font-size: 44px;
+        transform: translateY(-9px);
+        margin-left: 25.75px;
+
+        cursor: pointer;
+    }
+
+    .nav{
+        display: none;
+        text-align: center;
+        background-color: #E5E5E5;
+        width: 100%;
+        top: 135px;
+        right: 0;
+
+        position: absolute;
+        z-index: 1000;
+
+        padding: 20px 0;
+    }
+
+    .nav-link{
+        display: block;
+        margin: 10px auto;
+    }
+
+    /*hiden*/
+
+    .hiden{
+        display: none;
+    }
+
+    .block{
+        display: block;
+    }
+
+
     /*Intro*/
+
 
     .intro-iner{
         padding: 58px 0;
@@ -1298,6 +1594,56 @@ h1, h2, h3, h4, h5, h6{
     .footer-iner{
         padding: 20px 0;
     }
+
+
+    /*Contacts*/
+
+    .contacts-inner {
+        margin: 40px 0;
+    }
+
+    .contacts {
+        padding-top: 30px;
+    }
+
+    .contacts-info-item:last-child{
+        max-width: 110px;
+    }
+
+    /*Doctors*/
+
+    .doctors {
+        padding-top: 30px;
+    }
+
+    .doctors-list{
+        margin: 40px 0;
+
+    }
+
+    .doctors-name {
+        font-size: 29px;
+        margin-top: 25px;
+    }
+
+    .doctors-exp {
+        font-size: 18px;
+    }
+
+    .doctors-prof {
+        margin-bottom: 15px;
+        margin-top: 20px;
+    }
+
+    .doctors-info {
+        height: 310px;
+    }
+
+
+    .doctors-btn{
+        margin-bottom: 30px;
+    }
+
 }
 
 
@@ -1327,8 +1673,18 @@ h1, h2, h3, h4, h5, h6{
 
     }
 
+    .cross {
+        font-size: 37px;
+        transform: translateY(-13px);
+        margin-left: 23.12px;
+    }
+
     .header-tel-icon{
         font-size: 26px;
+    }
+
+    .nav{
+        top: 120px;
     }
 
     /*Intro*/
@@ -1441,6 +1797,46 @@ h1, h2, h3, h4, h5, h6{
         transform: translateY(-4px);
 
     }
+
+    /*Contacts*/
+
+    
+    .contacts-info {
+        flex-direction: column;
+    }
+
+    .contacts-info-item:last-child{
+        margin-top: 30px;
+    }
+
+
+    /*Doctors*/
+
+    .doctors-name {
+        font-size: 26px;
+        max-width: 200px;
+    }
+
+    .doctors-exp {
+        font-size: 17px;
+    }
+
+    .doctors-item{
+        width: 345px;
+    }
+
+    .doctors-prof {
+        width: 250px;
+    }
+
+    .doctors-info {
+        height: 290px;
+    }
+
+
+    .doctors-list {
+        gap: 33px 33px;
+    }
 }
 
 
@@ -1468,9 +1864,19 @@ h1, h2, h3, h4, h5, h6{
         transform: translateY(-7px);
     }
 
+    .cross {
+        font-size: 32px;
+        transform: translateY(-9px);
+        margin-left: 21.88px;
+    }
+
     .header-tel-icon {
         font-size: 21px;
         transform: translateY(8px);
+    }
+
+    .nav {
+        top: 109px;
     }
 
     /*Intro*/
@@ -1616,6 +2022,51 @@ h1, h2, h3, h4, h5, h6{
         padding-top: 3px;
     }
 
+    /*Contacts*/
+
+    .contacts-info-item{
+        width: 100%;
+    }
+
+    .contacts-inner {
+        margin: 25px 0;
+    }
+
+    .contacts-inner img {
+        margin-bottom: 15px;
+    }
+
+    .contacts-info-item:last-child{
+        margin-top: 20px;
+    }
+
+    /*Doctors*/
+
+    .doctors-list {
+        margin: 25px 0;
+    }
+
+    .doctors-name {
+        font-size: 24px;
+    }
+
+    .doctors-exp {
+        font-size: 16px;
+    }
+
+    .doctors-info {
+        height: 280px;
+    }
+
+
+    .doctors-prof {
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+
+    .doctors-prof {
+        width: 246px;
+    }
 }
 
 
