--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,9 @@ h1, h2, h3, h4, h5, h6{
 }
 
 
-
+a{
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
 /*Button*/
 
@@ -49,6 +51,7 @@ h1, h2, h3, h4, h5, h6{
 
 .btn span{
     margin-left: 5px;
+    display: inline-block
 }
 
 
@@ -177,7 +180,6 @@ h1, h2, h3, h4, h5, h6{
     transform: translateY(-9px);
     margin-left: 82px;
     text-decoration: none;
-
 }
 
 .header-lang-text{
@@ -568,6 +570,8 @@ h1, h2, h3, h4, h5, h6{
     font-size: 27px;
     line-height: 148%;
     text-align: center; 
+
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .number:last-child{
@@ -1401,6 +1405,8 @@ h1, h2, h3, h4, h5, h6{
         margin-left: 20px;
 
         cursor: pointer;
+
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
     }
 
     .cross{
@@ -1410,6 +1416,8 @@ h1, h2, h3, h4, h5, h6{
         margin-left: 25.75px;
 
         cursor: pointer;
+
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
     }
 
     .nav{
