--- a/css/styles.css
+++ b/css/styles.css
@@ -536,7 +536,7 @@ a{
 }
 
 .call-input{   
-    width:100%; 
+    width:320px; 
     border:0;
     font-family: 'Antonio', sans-serif;
     font-size: 64px;
